--- a/worker/package.json
+++ b/worker/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
     "ioredis": "^5.7.0",
+    "mongodb": "^6.18.0",
     "pino": "^9.9.0"
   },
   "devDependencies": {
