--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,9 +1,11 @@
 FROM node:20-alpine
 
-WORKDIR /app
-COPY package.json pnpm-lock.yaml* ./
+WORKDIR /usr/src/app
+
+COPY package*.json pnpm-lock.yaml ./
+
 RUN npm install -g pnpm && pnpm install
+
 COPY . .
 
-CMD ["pnpm", "dev"]
-
+CMD [ "pnpm", "dev" ]
