--- a/sink/package.json
+++ b/sink/package.json
@@ -20,6 +20,7 @@
     "pino": "^9.9.0"
   },
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
