--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:20-alpine
 
-WORKDIR /app
+WORKDIR /usr/src/app
 COPY package.json pnpm-lock.yaml* ./
 RUN npm install -g pnpm && pnpm install
 COPY . .
